--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codex - Your AI</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
   </head>
   <body>
