--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codex - Your AI</title>
     <link rel="stylesheet" href="style.css" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="app">
