--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="./images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codex - Your AI</title>
+    <meta name="description" content="Modern PWA Weather React Application" />
     <link rel="stylesheet" href="style.css" />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" href="./images/logo.png" />
   </head>
   <body>
     <div id="app">
