--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codex - Your AI</title>
-    <meta name="description" content="Modern PWA Weather React Application" />
-    <link rel="stylesheet" href="style.css" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="apple-touch-icon" href="./images/logo.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>My Awesome App</title>
+  <meta name="description" content="My Awesome App description">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+  <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+  <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="app">
